--- a/docker/postfix/app/flask_app/templates/base.html
+++ b/docker/postfix/app/flask_app/templates/base.html
@@ -17,52 +17,17 @@
    <meta http-equiv="content-type" content="text/html;charset=utf-8">
 </head>
 <body>
-   <!-- <nav class="navbar navbar-expand-lg navbar-light">
+<style>
+.bg-icon {
+  position: absolute;
+  color: rgba(0,0,0,0.2);
+  top: 50%;
+  transform: translateY(-50%);
+  left: 1em;
+}
+</style>
+   <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
       <div class="container-fluid">
-         <a class="navbar-brand" href="/">Home</a>
-         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-         </button>
-         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav"> -->
-               <!-- <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/">Home</a>
-               </li> -->
-               <!-- <li class="nav-item">
-                  <a class="nav-link" href="/signup">{{ _("S'inscrire") }}</a>
-               </li>
-               <li class="nav-item">
-                  <a class="nav-link" href="/login">{{ _("Se connecter") }}</a>
-               </li>
-               
-               <li class="nav-item">
-                  <a class="nav-link" href="/user">{{ _("Espace utilisateur") }}</a>
-               </li> -->
-               <!-- <li class="nav-item">
-                  <a class="nav-link" href="/consultmails">{{ _("Consulter mails en attente ") }}</a>
-               </li>
-               <li class="nav-item">
-                  <a class="nav-link" href="/consultmailsblacklist">{{ _("Consulter mails blacklistés ") }}</a>
-               </li> -->
-               <!-- <li class="nav-item">
-                  <a class="nav-link" href="/consultallmails">{{ _("Consulter mails ") }}</a>
-               </li>
-               <li class="nav-item">
-                  <a class="nav-link" href="/consultexp">{{ _("Consulter expéditeurs ") }}</a>
-               </li>
-               <li class="nav-item">
-                  <a class="nav-link" href="/stats">{{ _("Consulter statistiques ") }}</a>
-               </li>
-               
-               
-            </ul>
-         </div>
-      </div>
-   </nav>    -->
-   
-   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-         <!-- <a class="navbar-brand" href="/">Home</a> -->
          <a class="navbar-brand" href="/"><i style="color: orange; transform: rotate(-25deg)" class="fas fa-mail-bulk fa-2x"></i></a>
          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -82,18 +47,19 @@
                   <a class="nav-link {% if mail is defined and mail != '' %}{% else %}disabled{% endif %}" href="/consultexp"><i class="fas fa-user-cog"></i> {{ _("Consulter expéditeurs ") }}</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="/stats"><i class="fas fa-percent"></i>{{ _("Consulter statistiques ") }}</a>
+                  <a class="nav-link" href="/stats"><i class="fas fa-percent"></i> {{ _("Consulter statistiques ") }}</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="/"><i class="fas fa-heartbeat"></i>{{ _("Health Check ") }}</a>
+                  <a class="nav-link" href="/"><i class="fas fa-heartbeat"></i> {{ _("Health Check ") }}</a>
                </li>
             </ul>
 
             <ul class="navbar-nav">
                {% if mail is defined and mail != '' %}
-               <li class="nav-item-right"><a href="/user" class="nav-link">{{ mail }}</a>
+               <li>
+                  <a class="nav-link" href="/user">{{ mail }}</a>
                </li>
-               <li class="nav-item-right active bg-danger active">
+               <li>
                   <a class="nav-link" href="/logout"><i class="fas fa-sign-out-alt"></i> {{ _("Se déconnecter") }}</a>
                </li>
                {% else %}
@@ -110,7 +76,7 @@
    </nav>
    
    
-   <div class="container-fluid">
+   <div class="container-md bg-light">
       {% block login %}
       {% endblock%}
       
