--- a/docker/postfix/app/flask_app/templates/login.html
+++ b/docker/postfix/app/flask_app/templates/login.html
@@ -2,72 +2,71 @@
 {% block title %}Login {% endblock %}
 
 {% block content %}
+
+<br>
+<form action="#" method="post" name="form">
+  <section class="h-100 gradient-form" style="background-color: #eee;">
+    <div class="container py-5 h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-xl-10">
+          <div class="card rounded-3 text-black">
+            <div class="row g-0">
+              <div class="col-lg-6">
+                <div class="card-body p-md-5 mx-md-4">
+
+                  <div class="text-center">
+                    <i style="color: orange; transform: rotate(-25deg)" class="fas fa-mail-bulk fa-6x mb-3"></i>
+                    <h4 class="mt-1 pb-1" style="color: orange">We are Mail in Orange</h4>
+                    <h5 class="mt-1 mb-4 pb-1">Because Orange is the new Black</h5>
+                  </div>
+
+                  <form>
+                    <p>Please login to your account</p>
+
+                    <div class="form-outline mb-4">
+                      <input type="email" id="mail" name="mail" class="form-control" placeholder=" {{ _("Entrer votre mail") }}"/>
+                      <label class="form-label" for="mail">Username</label>
+                    </div>
+
+                    <div class="form-outline mb-4">
+                      <div class="input-group">
+                        <input type="password" id="mdp" name="mdp" class="form-control" placeholder="{{ _("Entrer votre mot de passe") }} "/>
+                        <span class="input-group-text" onclick="document.getElementById('mdp').type = (document.getElementById('mdp').type == 'password' ? 'text' : 'password') "><i class="fa fa-eye-slash" aria-hidden="true"></i>
+                        </span>
+                      </div>
+                      <label class="form-label" for="mdp">Password</label>
+                    </div>
+
 {% with messages = get_flashed_messages() %}
 {% if messages %}
 {% for msg in messages %}
-<p>{{msg}}</p>
+<div class="text-center pt-1 mb-1 pb-1 mb-1 text-danger">{{msg}}</div>
 {% endfor %}
 {% endif %}
 {% endwith %}
-
-<br>
-
-<form action="#" method="post" name="form">
-    <section class="h-100 gradient-form" style="background-color: #eee;">
-        <div class="container py-5 h-100">
-            <div class="row d-flex justify-content-center align-items-center h-100">
-                <div class="col-xl-10">
-                    <div class="card rounded-3 text-black">
-                        <div class="row g-0">
-                            <div class="col-lg-6">
-                                <div class="card-body p-md-5 mx-md-4">
-                                    
-                                    <div class="text-center">
-                                        <i style="color: orange; transform: rotate(-25deg)" class="fas fa-mail-bulk fa-6x mb-3"></i>
-                                        <h4 class="mt-1 pb-1" style="color: orange">We are Mail in Orange</h4>
-                                        <h5 class="mt-1 mb-4 pb-1">Because Orange is the new Black</h5>
-                                    </div>
-                                    
-                                    <form>
-                                        <p>Please login to your account</p>
-                                        
-                                        <div class="form-outline mb-4">
-                                            <input type="email" id="mail" name="mail" class="form-control" placeholder=" {{ _("Entrer votre mail") }}"/>
-                                            <label class="form-label" for="mail">Email</label>
-                                        </div>
-                                        
-                                        <div class="form-outline mb-4">
-                                            <div class="input-group">
-                                                <input type="password" id="mdp" name="mdp" class="form-control" placeholder="{{ _("Entrer votre mot de passe") }} "/>
-                                                <span class="input-group-text" onclick="document.getElementById('mdp').type = (document.getElementById('mdp').type == 'password' ? 'text' : 'password') "><i class="fa fa-eye-slash" aria-hidden="true"></i>
-                                                </span>
-                                            </div>
-                                            <label class="form-label" for="mdp">Password</label>
-                                        </div>
-                                        
-                                        <div class="text-center pt-1 mb-5 pb-1">
-                                            <button class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3" type="submit">Log in</button>
-                                        </div>
-                                        
-                                        <div class="d-flex align-items-center justify-content-center pb-4">
-                                            <p class="mb-0 me-2">Don't have an account?</p>
-                                            <a href="/signup" class="fw-bold">Sign Up</a></p>
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
-                            <div class="col-lg-6 d-flex align-items-center gradient-custom-2">
-                                <div class="px-3 py-4 p-md-5 mx-md-4">
-                                    <h4 class="mb-4">We protect more than your Mails</h4>
-                                    <p class="small mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="text-center pt-1 mb-5 pb-1">
+                      <button class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3" type="submit">Log in</button>
                     </div>
+
+                    <div class="d-flex align-items-center justify-content-center pb-4">
+                      <p class="mb-0 me-2">Don't have an account?</p>
+                      <a href="/signup" class="fw-bold">Sign Up</a></p>
+                    </div>
+                  </form>
                 </div>
+              </div>
+              <div class="col-lg-6 d-flex align-items-center gradient-custom-2">
+                <div class="px-3 py-4 p-md-5 mx-md-4">
+                  <h4 class="mb-4">We protect more than your Mails</h4>
+                  <p class="small mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
+              </div>
             </div>
+          </div>
         </div>
-    </section>
+      </div>
+    </div>
+  </section>
 </form>
 
 {% endblock %}
